MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/PaymentPlan__c.object-meta.xml
<CustomObject>
    <description>Object to store the payment plan details</description>
    <label>Payment Plan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>