MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/BrokerPayout__c.field-meta.xml
<CustomField>
    <fullName>BrokerPayout__c</fullName>
    <description>A field to store the amount of money to be paid to broker for their services</description>
    <label>Broker Payout %</label>
    <summarizedField>PaymentInstallements__c.BrokerPayout__c</summarizedField>
    <summaryForeignKey>PaymentInstallements__c.PaymentInstallment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>