MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10-90</fullName>
            </value>
            <value>
                <fullName>40-60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>