MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/EstimatedCompletionDateSPAArabic__c.field-meta.xml
<CustomField>
    <fullName>EstimatedCompletionDateSPAArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Completion Date SPA Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>