MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <description>A field to store the expiration date of the payment plan</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>