MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/Handover_Date_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Handover_Date_Arabic__c</fullName>
    <formula>&quot;٣٠ أبريل ٢٠٢٩&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handover Date Arabic</label>
    <type>Text</type>
</CustomField>