MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/Is_Employee_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Is_Employee_Payment_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Employee Payment Plan</label>
    <type>Checkbox</type>
</CustomField>