MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <description>A field to check whether the it is Active or not</description>
    <formula>IF(  AND(ISPICKVAL(Status__c, &quot;Active&quot;), TODAY() &gt; StartDate__c, TODAY() &lt; ExpiryDate__c) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>