MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/isDefault__c.field-meta.xml
<CustomField>
    <fullName>isDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A field to check whether the payment plan is defaulted or not</description>
    <label>isDefault</label>
    <type>Checkbox</type>
</CustomField>