MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/isFurnishedPaymentPlan__c.field-meta.xml
<CustomField>
    <fullName>isFurnishedPaymentPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFurnishedPaymentPlan</label>
    <type>Checkbox</type>
</CustomField>