MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/Maintenance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Fee__c</fullName>
    <label>Maintenance Fee %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>