MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/Nawy_Status__c.field-meta.xml
<CustomField>
    <fullName>Nawy_Status__c</fullName>
    <label>Nawy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Sync</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>