MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/Number_of_Maintenance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Maintenance_Fee__c</fullName>
    <description>This field will store the number of maintenance to collect in a payment plan</description>
    <label># Maintenance Fee Installments</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>