MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/Online_Sales__c.field-meta.xml
<CustomField>
    <fullName>Online_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Sales</label>
    <type>Checkbox</type>
</CustomField>