MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/PaymentInstallment__c.field-meta.xml
<CustomField>
    <fullName>PaymentInstallment__c</fullName>
    <description>A field to store the sum of the installments in the plan</description>
    <label>Payment Installment %</label>
    <summarizedField>PaymentInstallements__c.Milestone__c</summarizedField>
    <summaryForeignKey>PaymentInstallements__c.PaymentInstallment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>