MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/PaymentInstallmentPercent_Egypt__c.field-meta.xml
<CustomField>
    <fullName>PaymentInstallmentPercent_Egypt__c</fullName>
    <label>Payment Installment %</label>
    <summarizedField>PaymentInstallements__c.Milestone_Egypt_Percent__c</summarizedField>
    <summaryForeignKey>PaymentInstallements__c.PaymentInstallment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>