MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/PaymentPlanStructure__c.field-meta.xml
<CustomField>
    <fullName>PaymentPlanStructure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Plan Structure</label>
    <length>7</length>
    <type>Text</type>
</CustomField>