MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to its related phase</description>
    <label>Phase</label>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>Payment Plans</relationshipLabel>
    <relationshipName>Payment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>