MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to its related project</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Payment Plans</relationshipLabel>
    <relationshipName>Payment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>