MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/SalesAgentPayout__c.field-meta.xml
<CustomField>
    <fullName>SalesAgentPayout__c</fullName>
    <description>A field to store the amount of money to be paid to sales agent for their services</description>
    <label>Sales Agent Payout %</label>
    <summarizedField>PaymentInstallements__c.SalesAgentPayout__c</summarizedField>
    <summaryForeignKey>PaymentInstallements__c.PaymentInstallment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>