MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>A field to store the start date of the plan</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>