MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>A field to store the status of the payment plan</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>