MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>A field to store the type of the payment plan</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>PHPP</fullName>
            </value>
            <value>
                <fullName>Memo</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>