MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to its related unit</description>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Payment Plans</relationshipLabel>
    <relationshipName>Payment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>