MODON MRE BPDEV/force-app/main/default/objects/PaymentPlan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>isDefault__c</columns>
    <columns>isActive__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>